--- a/_sass/_fonts.sass
+++ b/_sass/_fonts.sass
@@ -1,6 +1,7 @@
 @import ./fonts/lora
 @import ./fonts/iosevka
 @import ./fonts/lora-italic
-@import ./fonts/han-css-fonts
+// TODO: fix han-css
+// @import ./fonts/han-css-fonts
 // @import ./fonts/merriweather
 @import ./fonts/pt-sans
